# drone_interfaces

./: readme.md
drone_interfaces/: CMakeLists.txt
drone_interfaces/action/: ExecuteMission.action  ExecutePayloadTask.action
drone_interfaces/msg/: ActuatorSetpoint.msg  ApprovedVehicleCommand.msg  AttitudeSetpoint.msg  AutonomyStatus.msg  BodyRateThrustSetpoint.msg  CommandGatewayStatus.msg  CtlTraj.msg  GeoObservation.msg  GuidanceCommand.msg  MissionGoal.msg  MissionRequest.msg  NavigationSetpoint.msg  NonTelem.msg  PayloadCommand.msg  PayloadFeedback.msg  PayloadHealth.msg  PayloadStatus.msg  PayloadTask.msg  RCCmd.msg  SafetyStatus.msg  TargetEstimate.msg  TargetTrack.msg  Telem.msg  Trajectory.msg  TrajectoryPoint.msg  VehicleHealth.msg  VehicleState.msg  Waypoint.msg  Waypoints.msg
msg/: HLCmdBatch.msg  LLCmd.msg  Meta.msg  ObsInfo.msg
